Added some sample custom properties for apps, orgs and users

--- a/gateway-config/apimgr/merge-dir/apigateway/webapps/apiportal/vordel/apiportal/app/app.config
+++ b/gateway-config/apimgr/merge-dir/apigateway/webapps/apiportal/vordel/apiportal/app/app.config
@@ -172,13 +172,32 @@ dojoConfig.app = {
     */
     customPropertiesConfig: {
         user: {
-            // custom properties...
+            sampleUserCustomProp: {
+                label: 'Sample custom property',
+                required: false,
+                help: "A sample custom property for a user entity.",
+                type: "custom"
+            }
         },
         organization: {
-            // custom properties...
+            sampleOrgCustomProp: {
+                label: 'Sample custom property',
+                required: false,
+                help: "A sample custom property for an organization entity.",
+                type: "custom"
+            }
         },
         application: {
-            // custom properties...
+            publicApp: {
+                label: 'Public Application',
+                required: true,
+                help: "Controls if the Application is pulic. Public application cannot access private APIs.",
+                type: "switch",
+                options: [
+                    {value: true, label: 'True'},
+                    {value: false, label: 'False'}
+                ]
+            }
         },
         api: {
             // custom properties...
