[skip builder] Adding a taling slash

--- a/api-single-payments-diagnostic/config/api-config.json
+++ b/api-single-payments-diagnostic/config/api-config.json
@@ -6,7 +6,7 @@
   "organization" : "RBI",
   "apiDefinition" : "../api-single-payments-mock/endpoints/payments.yaml",
   "summary" : "Processes submitted patient diagnostics data",
-  "backendBasepath" : "http://api-single-payments-diagnostic:8080/api",
+  "backendBasepath" : "http://api-single-payments-diagnostic:8080/api/",
   "authenticationProfiles" : [ {
     "name" : "_default",
     "isDefault" : true,
