Changed the name and the endpoint

--- a/api-emr-catalog/config/api-config.json
+++ b/api-emr-catalog/config/api-config.json
@@ -1,8 +1,8 @@
 {
-  "name" : "EMR-HealthCatalog",
+  "name" : "EMR HealthCatalog",
   "path" : "/api/emr/catalog",
   "state" : "published",
-  "version" : "3.7",
+  "version" : "5.7",
   "organization" : "Plexus Health",
   "apiDefinition" : "EMR-HealthCatalog.json",
   "summary" : "Processes health data for patient symptom recommendation",
