--- a/api-emr-catalog/config/api-config.json
+++ b/api-emr-catalog/config/api-config.json
@@ -6,7 +6,7 @@
   "organization" : "Plexus Health",
   "apiDefinition" : "EMR-HealthCatalog.json",
   "summary" : "Processes health data for patient symptom recommendation",
-  "backendBasepath" : "${BACKEND_HOST}/api/api/emr/catalog/",
+  "backendBasepath" : "http://some.host.com/api/api/emr/catalog/",
   "image" : "api-image.jpg",
   "securityProfiles" : [ {
     "name" : "_default",
