--- a/.github/workflows/api.account-transactions.deploy.yml
+++ b/.github/workflows/api.account-transactions.deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Single Payments API
+name: Deploy Account Transactions API
 
 on:
   push:
@@ -6,11 +6,11 @@ on:
       - main
       - feature/api-rbi
     paths:
-      - api-single-payments/**
+      - api-account-transactions/**
 
 defaults:
   run:
-    working-directory: api-single-payments
+    working-directory: api-account-transactions
 
 jobs:
   API-Deployment:
