--- a/api-single-payments/config/api-config.json
+++ b/api-single-payments/config/api-config.json
@@ -4,23 +4,9 @@
   "state" : "published",
   "version" : "3.7",
   "organization" : "RBI",
-  "apiDefinition" : "single-payments.yaml",
+  "apiDefinition" : "../api-single-payments-mock/endpoints/payments.yaml",
   "summary" : "This API is used to initiate, submit and get summary of single payment",
-  "backendBasepath" : "https://any.host.com/payments",
-  "securityProfiles" : [ {
-    "name" : "_default",
-    "isDefault" : true,
-    "devices" : [ {
-      "name" : "API Key",
-      "type" : "apiKey",
-      "order" : 1,
-      "properties" : {
-        "apiKeyFieldName" : "KeyId",
-        "takeFrom" : "HEADER",
-        "removeCredentialsOnSuccess" : "true"
-      }
-    } ]
-  } ],
+  "backendBasepath" : "http://api-single-payments-mock:8080/api/",
   "clientOrganizations" : [ "RBI" ],
   "applications" : [ {
     "name" : "RBI client app - Test",
