--- a/api-single-payments/config/api-config.json
+++ b/api-single-payments/config/api-config.json
@@ -4,9 +4,23 @@
   "state" : "published",
   "version" : "3.7",
   "organization" : "RBI",
-  "apiDefinition" : "../api-single-payments-mock/endpoints/payments.yaml",
+  "apiDefinition" : "single-payments.yaml",
   "summary" : "This API is used to initiate, submit and get summary of single payment",
-  "backendBasepath" : "http://api-single-payments-mock:8080/api/",
+  "backendBasepath" : "https://any.host.com/payments",
+  "securityProfiles" : [ {
+    "name" : "_default",
+    "isDefault" : true,
+    "devices" : [ {
+      "name" : "API Key",
+      "type" : "apiKey",
+      "order" : 1,
+      "properties" : {
+        "apiKeyFieldName" : "KeyId",
+        "takeFrom" : "HEADER",
+        "removeCredentialsOnSuccess" : "true"
+      }
+    } ]
+  } ],
   "clientOrganizations" : [ "RBI" ],
   "applications" : [ {
     "name" : "RBI client app - Test",
