--- a/api-bulk-payments/config/api-config.json
+++ b/api-bulk-payments/config/api-config.json
@@ -6,7 +6,7 @@
   "organization" : "RBI",
   "apiDefinition" : "bulk-payments.yaml",
   "summary" : "This API is used to initiate, submit and get summary of bulk payment",
-  "backendBasepath" : "https://any.host.com/bulk-payments",
+  "backendBasepath" : "http://any.host.com/bulk-payments",
   "clientOrganizations" : [ "RBI" ],
   "applications" : [ {
     "name" : "RBI client app - Test",
