--- a/api-single-payments/config/api-config.json
+++ b/api-single-payments/config/api-config.json
@@ -6,7 +6,7 @@
   "organization" : "RBI",
   "apiDefinition" : "single-payments.yaml",
   "summary" : "This API is used to initiate, submit and get summary of single payment",
-  "backendBasepath" : "https://any.host.com/payments",
+  "backendBasepath" : "http://any.host.com/payments",
   "clientOrganizations" : [ "RBI" ],
   "requestPolicy": "Request Policy 1",
   "applications" : [ {
