--- a/api-single-payments-diagnostic/config/api-config.json
+++ b/api-single-payments-diagnostic/config/api-config.json
@@ -1,5 +1,5 @@
 {
-  "name" : "SinglePayments-MockAPI",
+  "name" : "SinglePayments-API - v.2.0 Mock for Diagnosis",
   "path" : "/single-payments",
   "state" : "published",
   "version" : "1.0",
