--- a/api-documents/config/api-config.json
+++ b/api-documents/config/api-config.json
@@ -8,6 +8,7 @@
   "summary" : "This API is used to initiate, submit and get summary of document",
   "backendBasepath" : "http://any.host.com/documents",
   "clientOrganizations" : [ "RBI" ],
+  "requestPolicy": "Request Policy 1",
   "applications" : [ {
     "name" : "RBI client app - Test",
     "enabled" : true,
