--- a/api-single-payments-diagnostic/config/api-config.json
+++ b/api-single-payments-diagnostic/config/api-config.json
@@ -8,6 +8,7 @@
   "summary" : "Processes submitted patient diagnostics data",
   "backendBasepath" : "http://api-single-payments-diagnostic:8080/api/",
   "clientOrganizations" : [ "RBI" ],
+  "requestPolicy": "Request Policy 1",
   "applications" : [ {
     "name" : "RBI client app - Test",
     "enabled" : true,
