--- a/api-single-payments-diagnostic/config/api-config.json
+++ b/api-single-payments-diagnostic/config/api-config.json
@@ -8,7 +8,11 @@
   "summary" : "Processes submitted patient diagnostics data",
   "backendBasepath" : "http://api-single-payments-diagnostic:8080/api/",
   "clientOrganizations" : [ "RBI" ],
-  "requestPolicy": "Request Policy 1",
+  "outboundProfiles": {
+    "_default": {
+      "requestPolicy": "Request Policy 1"
+    }
+  },
   "applications" : [ {
     "name" : "RBI client app - Test",
     "enabled" : true,
