--- a/api-single-payments/config/api-config.json
+++ b/api-single-payments/config/api-config.json
@@ -8,7 +8,11 @@
   "summary" : "This API is used to initiate, submit and get summary of single payment",
   "backendBasepath" : "http://any.host.com/payments",
   "clientOrganizations" : [ "RBI" ],
-  "requestPolicy": "Request Policy 1",
+  "outboundProfiles": {
+    "_default": {
+      "requestPolicy": "Request Policy 1"
+    }
+  },
   "applications" : [ {
     "name" : "RBI client app - Test",
     "enabled" : true,
