--- a/api-accounts/config/api-config.json
+++ b/api-accounts/config/api-config.json
@@ -5,7 +5,7 @@
   "version" : "1.0",
   "organization" : "RBI",
   "apiDefinition" : "accounts.yaml",
-  "summary" : "This API is used to initiate, submit and get summary of account",
+  "summary" : "This API is used to initiate, submit and get summary of account changed",
   "backendBasepath" : "http://any.host.com/accounts",
   "clientOrganizations" : [ "RBI" ],
   "outboundProfiles": {
