--- a/api-risk/config/api-config.json
+++ b/api-risk/config/api-config.json
@@ -5,7 +5,7 @@
   "version" : "1.0",
   "organization" : "RBI",
   "apiDefinition" : "risk.yaml",
-  "summary" : "This API is used to initiate, submit and get summary of risk",
+  "summary" : "This API is used to initiate, submit and get summary of risk changed",
   "backendBasepath" : "http://any.host.com/risk",
   "clientOrganizations" : [ "RBI" ],
   "outboundProfiles": {
