--- a/api-account-transactions/config/api-config.json
+++ b/api-account-transactions/config/api-config.json
@@ -13,6 +13,39 @@
       "requestPolicy": "Request Policy 1"
     }
   },
+  "securityProfiles":[
+    {
+      "name":"_default",
+      "isDefault":true,
+      "devices":[
+        {
+          "type":"oauthExternal",
+          "name":"OAuth (External)",
+          "order":1,
+          "properties":{
+            "tokenStore":"Validate RBI Cognito Token",
+            "accessTokenLocation":"HEADER",
+            "authorizationHeaderPrefix":"Bearer",
+            "accessTokenLocationQueryString":"",
+            "scopesMustMatch":"Any",
+            "scopes":"axway-evaluation.com/m2m",
+            "removeCredentialsOnSuccess":true,
+            "implicitGrantEnabled":true,
+            "useClientRegistry":true,
+            "subjectSelector":"${oauth.token.client_id}",
+            "implicitGrantLoginEndpointUrl":"https://localhost:8089/api/oauth/authorize",
+            "implicitGrantLoginTokenName":"access_token",
+            "authCodeGrantTypeEnabled":true,
+            "authCodeGrantTypeRequestEndpointUrl":"https://localhost:8089/api/oauth/authorize",
+            "authCodeGrantTypeRequestClientIdName":"client_id",
+            "authCodeGrantTypeRequestSecretName":"client_secret",
+            "authCodeGrantTypeTokenEndpointUrl":"https://localhost:8089/api/oauth/token",
+            "authCodeGrantTypeTokenEndpointTokenName":"access_code"
+          }
+        }
+      ]
+    }
+  ],
   "applications" : [ {
     "name" : "RBI client app - Test",
     "enabled" : true,
