transaction default outbound rules

--- a/api-account-transactions/config/api-config.json
+++ b/api-account-transactions/config/api-config.json
@@ -45,7 +45,7 @@
     "_default": {
       "authenticationProfile": "_default",
       "requestPolicy": "Request Policy 1",
-      "routePolicy": "API Proxy"
+      "routePolicy": "_default"
     }
   },
   "applications" : [ {
