--- a/api-single-payments-diagnostic/config/api-config.json
+++ b/api-single-payments-diagnostic/config/api-config.json
@@ -8,6 +8,39 @@
   "summary" : "Processes submitted patient diagnostics data changed",
   "backendBasepath" : "http://api-single-payments-diagnostic:8080/api/",
   "clientOrganizations" : [ "RBI" ],
+  "securityProfiles":[
+    {
+      "name":"_default",
+      "isDefault":true,
+      "devices":[
+        {
+          "type":"oauthExternal",
+          "name":"OAuth (External)",
+          "order":1,
+          "properties":{
+            "tokenStore":"Validate RBI Cognito Token",
+            "accessTokenLocation":"HEADER",
+            "authorizationHeaderPrefix":"Bearer",
+            "accessTokenLocationQueryString":"",
+            "scopesMustMatch":"All",
+            "scopes":"axway-evaluation.com/m2m, axway-evaluation.com/customer",
+            "removeCredentialsOnSuccess":true,
+            "implicitGrantEnabled":true,
+            "useClientRegistry":true,
+            "subjectSelector":"${oauth.token.client_id}",
+            "implicitGrantLoginEndpointUrl":"https://localhost:8089/api/oauth/authorize",
+            "implicitGrantLoginTokenName":"access_token",
+            "authCodeGrantTypeEnabled":true,
+            "authCodeGrantTypeRequestEndpointUrl":"https://localhost:8089/api/oauth/authorize",
+            "authCodeGrantTypeRequestClientIdName":"client_id",
+            "authCodeGrantTypeRequestSecretName":"client_secret",
+            "authCodeGrantTypeTokenEndpointUrl":"https://localhost:8089/api/oauth/token",
+            "authCodeGrantTypeTokenEndpointTokenName":"access_code"
+          }
+        }
+      ]
+    }
+  ],
   "outboundProfiles": {
     "_default": {
       "requestPolicy": "Request Policy 1"
