multiple scopes for customer

--- a/api-customers/config/api-config.json
+++ b/api-customers/config/api-config.json
@@ -22,8 +22,8 @@
             "accessTokenLocation":"HEADER",
             "authorizationHeaderPrefix":"Bearer",
             "accessTokenLocationQueryString":"",
-            "scopesMustMatch":"Any",
-            "scopes":"axway-evaluation.com/m2m",
+            "scopesMustMatch":"All",
+            "scopes":"axway-evaluation.com/m2m, axway-evaluation.com/customer",
             "removeCredentialsOnSuccess":true,
             "implicitGrantEnabled":true,
             "useClientRegistry":true,
