Added new custom property for Request-Validation

--- a/gateway-config/apimgr/merge-dir/apigateway/webapps/apiportal/vordel/apiportal/app/app.config
+++ b/gateway-config/apimgr/merge-dir/apigateway/webapps/apiportal/vordel/apiportal/app/app.config
@@ -211,6 +211,16 @@ dojoConfig.app = {
                     {value: false, label: 'False'}
                 ]
             },
+            validateRequest: {
+                label: 'Validate request',
+                required: false,
+                help: "If enabled, the request will be validated against the OpenAPI specification.",
+                type: "switch",
+                options: [
+                    {value: true, label: 'True'},
+                    {value: false, label: 'False'}
+                ]
+            },
             securityLevel: {
                 label: 'Security level',
                 required: true,
