--- a/api-emr-diagnostic/config/api-deployment.yaml
+++ b/api-emr-diagnostic/config/api-deployment.yaml
@@ -1,32 +1,32 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: api-emr-diagnostic
+  name: emr-diagnostic-app
 spec:
   type: ClusterIP
   ports:
     - port: 8080
       targetPort: 8080
   selector:
-    app: api-emr-diagnostic
+    app: emr-diagnostic-app
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: api-emr-diagnostic
+  name: emr-diagnostic-app
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: api-emr-diagnostic
+      app: emr-diagnostic-app
   template:
     metadata:
       labels:
-        app: api-emr-diagnostic
+        app: emr-diagnostic-app
     spec:
       containers:
-        - name: api-emr-diagnostic
-          #image: docker.pkg.github.com/cwiechmann/api-project-examples/api-emr-diagnostic:latest
+        - name: emr-diagnostic-app
+          #image: docker.pkg.github.com/cwiechmann/api-project-examples/emr-diagnostic-app:latest
           image: <IMAGE>
           resources:
             requests:
