Making the EMR-APIs public

--- a/api-emr-catalog/config/api-config.json
+++ b/api-emr-catalog/config/api-config.json
@@ -40,5 +40,8 @@
     "name" : "Plexus Suite - Patient Monitoring",
     "enabled" : true,
     "state" : "approved"
-  } ]
+  } ],
+  "customProperties":{
+    "publicAPI": "true"
+  }
 }
