--- a/.github/workflows/gateway.anm.deploy.yml
+++ b/.github/workflows/gateway.anm.deploy.yml
@@ -1,15 +1,16 @@
 name: Deploy Admin-Node-Manager
 
 env:
-  dockerRegistry: docker.pkg.github.com
+  dockerRegistry: ghcr.io
   dockerRepository: cwiechmann/axway-api-management-automated
-  baseImage: "base:77-20210530"
-  outImage: "anm:77-20210530-v1"
+  baseImage: "base:77-20210830-1"
+  outImage: "anm:77-20210830-1"
 
 on:
   push:
     branches:
       - main
+      - test-august-release
     paths:
       - gateway-config/anm/**
   release:
