--- a/.github/workflows/api.atm-locater.deploy.yml
+++ b/.github/workflows/api.atm-locater.deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy ATM-Locations API
+name: Deploy ATM-Locator API
 
 on:
   push:
@@ -53,3 +53,24 @@ jobs:
           APIM_PORT: ${{ secrets.APIM_PORT }}
         run: |
           mvn clean exec:java
+
+  test-api:
+    if: "!contains(github.event.head_commit.message, 'skip ci')"
+    name: Test API
+    runs-on: ubuntu-latest
+    needs: deploy-api
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install newman
+        run: sudo npm -g install newman
+      - name: Run Integration-API tests
+        if: ${{ github.event_name == 'pull_request' }}
+        run: |
+          sleep 1
+          newman run ./tests/ATM-Locator-API.postman_collection.json -e ../lib/Integration-Environment.postman_environment.json --reporter-json-export output.json --insecure
+      - name: Run QA-API tests
+        if: ${{ github.event_name != 'pull_request' }}
+        run: |
+          sleep 1
+          newman run ./tests/ATM-Locator-API.postman_collection.json -e ../lib/Demo-Environment.postman_environment.json --reporter-json-export output.json --insecure
